# HOG-Human-Detector

./: .travis.yml  CMakeLists.txt  LICENSE.txt  perception.txt  readme.md  test.txt
app/: CMakeLists.txt  hogHumanDetect.cpp  imageProcess.cpp  inputHandle.cpp  main.cpp  outputDisplay.cpp  perception.cpp
include/: hogHumanDetect.h  imageProcess.h  inputHandle.h  outputDisplay.h  perception.h
result/: check.txt  cpplint.txt  valgrind.txt
test/: CMakeLists.txt  test.cpp
